Created the form

--- a/Index.html
+++ b/Index.html
@@ -13,5 +13,13 @@
 </style>
 <body>
   <h1>Gitty Cat</h1>
+
+  <form>
+    <input 
+    type="text" 
+    name="id" 
+    id="first-name"
+    placeholder="What is your first name">
+  </form>
 </body>
 </html>
