--- a/Index.html
+++ b/Index.html
@@ -10,16 +10,21 @@
     text-align: center;
     color:crimson;
   }
+
+  h2 {
+    text-align: center;
+    color: #000;
+  }
+  
 </style>
 <body>
   <h1>Gitty Cat</h1>
+  <h2>A testpage for GitHub</h2>
 
   <form>
-    <input 
-    type="text" 
-    name="id" 
-    id="first-name"
-    placeholder="What is your first name">
+    <input type="email" placeholder="Enter your email">
+    <input type="password" placeholder="Enter your password">
+    <input type="submit" value="Login">
   </form>
 </body>
 </html>
