--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,10 @@
   <title>GitHub</title>
 </head>
 <style>
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
   h1 {
     text-align: center;
     color:crimson;
@@ -15,11 +19,17 @@
     text-align: center;
     color: #000;
   }
-  
+
+  h3 {
+    text-align: center;
+    color: #000;
+  }
+
 </style>
 <body>
   <h1>Gitty Cat</h1>
   <h2>A testpage for GitHub</h2>
+  <h3>Fill out the form below</h3>
 
   <form>
     <input type="email" placeholder="Enter your email">
